--- a/flex_and_vision/requirements.txt
+++ b/flex_and_vision/requirements.txt
@@ -1,4 +1,7 @@
 Flask==1.0.2
 gunicorn==19.9.0
+numpy==1.16.4
+google-api-python-client==1.7.11
+oauth2client==4.1.3
 google-cloud-storage==1.13.2
 google-cloud-datastore==1.7.3
